Correct spacing and add marquee to homepage

--- a/static/css/base_style.css
+++ b/static/css/base_style.css
@@ -33,7 +33,6 @@ main {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    margin-bottom: 60px;
 }
 
 #apeskinian {
@@ -113,34 +112,76 @@ main {
 }
 
 /* HOMEPAGE */
-#welcome-message-section {
-    background-color: rgb(180, 180, 180);
-    height: 150px;
+#homepage-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
-#new-items-section {
-    height: 150px;
+.welcome-container {
+    background-color: rgb(220, 220, 220);
 }
 
-#as-featured-in-section {
-    height: 150px;
-    background-color: rgb(180, 180, 180)
+.as-featured-in-container {
+    height: 50px;
 }
 
-#featured-realm-section {
-    height: 150px;
+/* 
+Marquee CSS used and edited from Rytan Mulligans article and codepen
+https://ryanmulligan.dev/blog/css-marquee/
+https://codepen.io/hexagoncircle/pen/eYMrGwW
+*/
+
+.marquee {
+    --gap: 1rem;
+    /* position: relative; */
+    display: flex;
+    overflow: hidden;
+    user-select: none;
+    gap: var(--gap);
+}
+  
+.marquee__content {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: var(--gap);
+    min-width: 100%;
+}
+  
+@keyframes scroll {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(calc(-100% - var(--gap)));
+    }
+}
+  
+/* Pause animation when reduced-motion is set */
+@media (prefers-reduced-motion: reduce) {
+    .marquee__content {
+        animation-play-state: paused !important;
+    }
+}
+  
+/* Enable animation */
+.marquee .marquee__content {
+    animation: scroll 60s linear infinite;
 }
 
-#support-section {
-
+/* Pause on hover */
+.marquee--hover-pause:hover .marquee__content {
+    animation-play-state: paused;
 }
+/* END OF MARQUEE CSS */
 
 #support-links {
     background-color: #EBDAAF;
 }
 
 #support-social {
-    min-height: 80px;
     font-size: 40px;
     background-color: #839680;
 }
@@ -150,8 +191,6 @@ main {
 }
 
 #newsletter-form-email {
-    padding: 5px;
-    background-color: white;
     border-radius: 8px 0px 0px 8px;
     opacity: 0.50;
     border: none;
